--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-plausible": "^3.12.4",
     "react": "^19.0.0",
